--- a/homework/hw04/my_app/app/views/layouts/friends.html.erb
+++ b/homework/hw04/my_app/app/views/layouts/friends.html.erb
@@ -1,3 +1,12 @@
+<!--begin
+Author: Charu Jain
+Homework 4: Personal App
+Description: Add 'main' to list of stylesheets
+Usage: Run http://localhost:3000/friends/
+=end
+-->
+
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -5,7 +14,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Friends: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'scaffold', 'main' %>
 </head>
 <body>
 
