--- a/homework/my_app/app/views/notes/category.html.erb
+++ b/homework/my_app/app/views/notes/category.html.erb
@@ -1,12 +1,24 @@
+<!-- Author: Charu Jain
+Homework 6: Personal App
+Description: Display notes of a particular category
+Usage: Run http://localhost:3000/notes/category/JBS-homework
+
+-->
+
+
 <h1>Notes</h1>
-<table>
+
 <% @notes.each do |note| %>
-  <tr>
-    <td><%=h note.title %></td>
-    <td><%=h note.description %></td>
-    
-  </tr>
+ <p>
+  <!--Display the notes in a list-->  
+  <ul>
+    <li>
+	<%=h note.title %> 
+  	<%=h note.description %>
+	</li>
+</ul>
+</p>
+
 <% end %>
-</table>
 
  
