--- a/homework/my_app/app/views/notes/edit.html.erb
+++ b/homework/my_app/app/views/notes/edit.html.erb
@@ -13,7 +13,7 @@
   </p>
   <p>
     <%= f.label :category_id %><br />
-    <%= f.text_field :category_id %>
+    <%= f.text_field :category.name %>
   </p>
   <p>
     <%= f.submit 'Update' %>
